st-peterrod/Grading/pa1_results.txt
EC327 Spring 2014 Grade Report for PA1

This is your initial grade report on programming assignment one.

--------perfect report--------
perfect.cpp found.
    perfect compiled.
 -> perfect is perfect
 -> grade is 10/10

-------multibase report-------
multibase.cpp found.
    multibase compiled.
 -> you had 8 correct out of 8
 -> your grade is 10/10

---------happy report---------
happy.cpp found.
    happy compiled.
 -> happy ran perfectly
 -> grade is 10/10

------consecutive report------
consecutive.cpp found.
    consecutive compiled.
 program dot not run properly when input was (1, 2, 3, 5)
 error was: Command '['./pa1_consecutive']' timed out after 2 seconds
 program dot not run properly when input was (9, 10, 100, 11)
 error was: Command '['./pa1_consecutive']' timed out after 2 seconds
 program dot not run properly when input was (9, 8, 7, 6)
 error was: Command '['./pa1_consecutive']' timed out after 2 seconds
 program dot not run properly when input was (4, 5, 6)
 error was: Command '['./pa1_consecutive']' timed out after 2 seconds
 -> you had 4 correct out of 8
 -> your grade is 6/10

-----binaryfinder report------
binaryfinder.cpp found.
Your program binaryfinder.cpp failed to compile. Here is the error message
/usr/local/bin/g++-4.8 binaryfinder.cpp -o pa1_binaryfinder
binaryfinder.cpp: In function 'int main()':
binaryfinder.cpp:21:3: error: expected ';' before 'cin'
   cin >> testnum; 
   ^
binaryfinder.cpp:31:33: error: lvalue required as left operand of assignment
  while (sequence < 0 || bintest = 0)
                                 ^
binaryfinder.cpp:56:4: error: expected ';' before 'k'
    k--;
    ^
binaryfinder.cpp:66:4: error: expected ',' or ';' before 'if'
    if(binvec[i] == 1 || binvec[i] == 0)
    ^
binaryfinder.cpp:72:7: error: 'up' was not declared in this scope
   if (up == count)
       ^
binaryfinder.cpp:75:4: error: expected '}' before 'else'
    else
    ^
binaryfinder.cpp: At global scope:
binaryfinder.cpp:83:20: error: 'testnum' was not declared in this scope
 const  int limit = testnum;
                    ^
binaryfinder.cpp:88:2: error: expected unqualified-id before '{' token
  {
  ^
make: *** [pa1_binaryfinder] Error 1

 -> your grade is 1/10

------divisorsum report-------
divisorsum.cpp found.
    divisorsum compiled.
 -> divisorsum calculated correctly, but the output was not
 -> formatted as requested.
 -> grade is 9/10


Your grade for PA1 is 46/60
